# chapkit_minimalist_example_r

./: Dockerfile  Makefile  README.md  compose.yml  main.py  postman_collection.json  pyproject.toml  train.R
.github/workflows/: ci.yml
scripts/: predict.R  train.R
