[project]
name = "minimalist_example_r_chapkit"
version = "0.1.0"
description = "ML service for minimalist_example_r_chapkit"
requires-python = ">=3.13"
dependencies = [
    "chapkit>=0.10.3",
    "pandas>=2.3.3",
    # Add your ML library here (e.g., "scikit-learn>=1.6.1", "tensorflow>=2.17.0")
]

[dependency-groups]
dev = [
    "uvicorn[standard]>=0.30.0",
]