[project]
name = "chapkit_minimalist_example_r"
version = "0.1.0"
description = "ML service for chapkit_minimalist_example_r"
requires-python = ">=3.13"
dependencies = [
    "chapkit>=0.24.0",
    # Data handling lives in the R scripts (scripts/train.R, scripts/predict.R) -
    # add Python deps here only if your service-side code (validation hooks,
    # custom routes, etc.) needs them.
]

[dependency-groups]
dev = [
    "uvicorn[standard]>=0.30.0",
]