[project]
name = "chapkit_minimalist_example_r"
version = "0.1.0"
description = "ML service for chapkit_minimalist_example_r"
requires-python = ">=3.13"
dependencies = [
    "chapkit>=0.27.0",
    # Data handling lives in the R scripts (scripts/train.R, scripts/predict.R) -
    # add Python deps here only if your service-side code (validation hooks,
    # custom routes, etc.) needs them.
]

[dependency-groups]
dev = [
    "ruff>=0.15.10",
    "uvicorn[standard]>=0.30.0",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
fixable = ["ALL"]
select = ["E", "W", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
